--- a/style.css
+++ b/style.css
@@ -47,6 +47,16 @@ button:hover {
   background: #005fa3;
 }
 
+.delete-btn {
+  background: none;
+  border: none;
+  padding: 0;
+  margin-left: 10px;
+  cursor: pointer;
+  font-size: 1em;
+  color: red;
+}
+
 .danger {
   background: #d9534f;
 }
